--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_DocCTemplate_outdatedStableVersion.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_DocCTemplate_outdatedStableVersion.1.html
@@ -32,8 +32,8 @@
    </div>
    <div class="latest-stable-wrap">
     <div class="inner latest-stable">
-     This documentation is from a previous release and may not reflect the latest stable release. 
-     <a href="/owner/package/2.0.0/documentation/archive1">View latest stable docs</a>.
+     This documentation is from a previous release and may not reflect the latest version. 
+     <a href="/owner/package/2.0.0/documentation/archive1">View latest documentation</a>.
     </div>
    </div>
   </header> 
