--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_DocCTemplate_multipleVersions.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_DocCTemplate_multipleVersions.1.html
@@ -41,8 +41,8 @@
    </div>
    <div class="latest-stable-wrap">
     <div class="inner latest-stable">
-     This documentation is from the main branch and may not reflect the latest stable release. 
-     <a href="/owner/package/1.0.1/documentation/archive1">View latest stable docs</a>.
+     This documentation is from the main branch and may not reflect the latest version. 
+     <a href="/owner/package/1.0.1/documentation/archive1">View latest documentation</a>.
     </div>
    </div>
   </header> 
