--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_HomeIndexView.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_HomeIndexView.1.html
@@ -155,12 +155,58 @@
           </section>
           <section>
             <div class="scta">
-              <p>The Swift Package Index is an 
-                <a href="https://github.com/SwiftPackageIndex/SwiftPackageIndex-Server">open-source</a> project funded by community donations.
+              <p>This project wouldn't be possible without 
+                <a href="https://github.com/sponsors/SwiftPackageIndex">community support</a>. Please consider 
+                <a href="https://github.com/sponsors/SwiftPackageIndex">joining 14 other sponsors</a>.
               </p>
-              <p>Please consider 
-                <a href="https://github.com/sponsors/SwiftPackageIndex">sponsoring the project</a> to support the time we dedicate to it. 
-                <strong>Thank you!</strong>
+              <p>
+                <div class="avatars">
+                  <a href="https://github.com/sponsors/SwiftPackageIndex">
+                    <img src="/images/logo.svg" title="Community Sponsor" alt="Community Sponsor"/>
+                  </a>
+                  <a href="https://github.com/sponsors/SwiftPackageIndex">
+                    <img src="/images/logo.svg" title="Community Sponsor" alt="Community Sponsor"/>
+                  </a>
+                  <a href="https://github.com/sponsors/SwiftPackageIndex">
+                    <img src="/images/logo.svg" title="Community Sponsor" alt="Community Sponsor"/>
+                  </a>
+                  <a href="https://github.com/sponsors/SwiftPackageIndex">
+                    <img src="/images/logo.svg" title="Community Sponsor" alt="Community Sponsor"/>
+                  </a>
+                  <a href="https://github.com/sponsors/SwiftPackageIndex">
+                    <img src="/images/logo.svg" title="Community Sponsor" alt="Community Sponsor"/>
+                  </a>
+                  <a href="https://github.com/sponsors/SwiftPackageIndex">
+                    <img src="/images/logo.svg" title="Community Sponsor" alt="Community Sponsor"/>
+                  </a>
+                  <a href="https://github.com/sponsors/SwiftPackageIndex">
+                    <img src="/images/logo.svg" title="Community Sponsor" alt="Community Sponsor"/>
+                  </a>
+                  <a href="https://github.com/sponsors/SwiftPackageIndex">
+                    <img src="/images/logo.svg" title="Community Sponsor" alt="Community Sponsor"/>
+                  </a>
+                  <a href="https://github.com/sponsors/SwiftPackageIndex">
+                    <img src="/images/logo.svg" title="Community Sponsor" alt="Community Sponsor"/>
+                  </a>
+                  <a href="https://github.com/sponsors/SwiftPackageIndex">
+                    <img src="/images/logo.svg" title="Community Sponsor" alt="Community Sponsor"/>
+                  </a>
+                  <a href="https://github.com/sponsors/SwiftPackageIndex">
+                    <img src="/images/logo.svg" title="Community Sponsor" alt="Community Sponsor"/>
+                  </a>
+                  <a href="https://github.com/sponsors/SwiftPackageIndex">
+                    <img src="/images/logo.svg" title="Community Sponsor" alt="Community Sponsor"/>
+                  </a>
+                  <a href="https://github.com/sponsors/SwiftPackageIndex">
+                    <img src="/images/logo.svg" title="Community Sponsor" alt="Community Sponsor"/>
+                  </a>
+                  <a href="https://github.com/sponsors/SwiftPackageIndex">
+                    <img src="/images/logo.svg" title="Community Sponsor" alt="Community Sponsor"/>
+                  </a>
+                </div>
+                <small>
+                  <a href="https://github.com/sponsors/SwiftPackageIndex">&hellip; and 0 more.</a>
+                </small>
               </p>
             </div>
             <a href="https://example.com/sponsored/link">
@@ -169,9 +215,7 @@
                   <source srcset="/images/logo.svg" media="(prefers-color-scheme: dark)"/>
                   <img alt="Sample Sponsor logo" src="/images/logo.svg"/>
                 </picture>
-                <p>Sponsored links tell everyone about a thing that you can use to do another thing you need to do! 
-                  <span>Learn More</span>.
-                </p>
+                <p>Sponsored links tell everyone about a thing that you can use to do another thing to do!</p>
               </div>
             </a>
             <small>Thanks so much to all of our generous sponsors for 
