Fix/update tests

--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_binary_targets.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_binary_targets.1.html
@@ -175,14 +175,16 @@
                         </p>
                       </div>
                       <div class="column-labels">
+                        <div>5.7</div>
                         <div>5.6</div>
                         <div>5.5</div>
                         <div>5.4</div>
                         <div>5.3</div>
                       </div>
                       <div class="results">
-                        <div class="compatible" title="Built successfully with Swift 5.6"></div>
-                        <div class="unknown" title="No build information available for Swift 5.5"></div>
+                        <div class="compatible" title="Built successfully with Swift 5.7"></div>
+                        <div class="unknown" title="No build information available for Swift 5.6"></div>
+                        <div class="incompatible" title="Build failed with Swift 5.5"></div>
                         <div class="incompatible" title="Build failed with Swift 5.4"></div>
                         <div class="incompatible" title="Build failed with Swift 5.3"></div>
                       </div>
@@ -194,15 +196,17 @@
                         </p>
                       </div>
                       <div class="column-labels">
+                        <div>5.7</div>
                         <div>5.6</div>
                         <div>5.5</div>
                         <div>5.4</div>
                         <div>5.3</div>
                       </div>
                       <div class="results">
+                        <div class="compatible" title="Built successfully with Swift 5.7"></div>
                         <div class="compatible" title="Built successfully with Swift 5.6"></div>
                         <div class="compatible" title="Built successfully with Swift 5.5"></div>
-                        <div class="compatible" title="Built successfully with Swift 5.4"></div>
+                        <div class="incompatible" title="Build failed with Swift 5.4"></div>
                         <div class="incompatible" title="Build failed with Swift 5.3"></div>
                       </div>
                     </li>
