--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_single_row_tables.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_single_row_tables.1.html
@@ -172,12 +172,14 @@
                         </p>
                       </div>
                       <div class="column-labels">
+                        <div>5.7</div>
                         <div>5.6</div>
                         <div>5.5</div>
                         <div>5.4</div>
                         <div>5.3</div>
                       </div>
                       <div class="results">
+                        <div class="compatible" title="Built successfully with Swift 5.7"></div>
                         <div class="compatible" title="Built successfully with Swift 5.6"></div>
                         <div class="compatible" title="Built successfully with Swift 5.5"></div>
                         <div class="compatible" title="Built successfully with Swift 5.4"></div>
