Updated snapshot test to have a new name, and use a static URL.

--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_with_documentation_link.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_with_documentation_link.1.html
@@ -290,7 +290,7 @@
                   </div>
                 </li>
                 <li>
-                  <a href="/Alamo/Alamofire/main/documentation/archive" data-turbo="false">Documentation</a>
+                  <a href="https://example.com/package/documentation" data-turbo="false">Documentation</a>
                 </li>
               </ul>
             </section>
