--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_binary_targets.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_binary_targets.1.html
@@ -333,7 +333,7 @@
             </section>
           </section>
         </article>
-        <section data-controller="tab-bar" data-action="popstate@window->tab-bar#setTabFromLocation">
+        <section data-controller="tab-bar">
           <nav>
             <ul class="tab-list">
               <li id="readme" data-tab-bar-target="tab" data-action="click->tab-bar#updateTab">README</li>
