--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_MaintainerInfoIndex.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_MaintainerInfoIndex.1.html
@@ -122,10 +122,10 @@
           </div>
           <p>Copy the Markdown above into your package's README file to show always-up-to-date compatibility status for your package.</p>
           <h3>Manifest File</h3>
-          <p>There are more aspects of how the Swift Package Index displays your package you can control. You can do this by adding the manifest file 
-            <code>.spi.yml</code> to your package repository.
+          <p>You can control more aspects of how the Swift Package Index treats your package repository, including improving build compatibility results and opting into automated DocC documentation hosting.</p>
+          <p>As the Swift Package Index scans your package repository, it will look for a manifest file named 
+            <code>.spi.yml</code>. If found, here are some of the things you can control or enable with it:
           </p>
-          <p>Here are some of the things you can control or enable:</p>
           <ul>
             <li>
               <p>
@@ -134,7 +134,7 @@
             </li>
             <li>
               <p>
-                <a href="/SwiftPackageIndex/SPIManifest/documentation/spimanifest/commonusecases#selfHosting">Configure a link to your self-hosted documentation</a>.
+                <a href="/SwiftPackageIndex/SPIManifest/documentation/spimanifest/commonusecases#selfHosting">Configure a link to external self-hosted documentation</a>.
               </p>
             </li>
             <li>
@@ -145,13 +145,13 @@
               </p>
             </li>
             <li>
-              <p>
-                <a href="/SwiftPackageIndex/SPIManifest/documentation/spimanifest/commonusecases#linuxImages">Configure base images for Linux builds</a> in case you require additional operating system level dependencies for your builds to succeed.
+              <p>If your builds require additional operating system-level dependencies to succeed, you can 
+                <a href="/SwiftPackageIndex/SPIManifest/documentation/spimanifest/commonusecases#linuxImages">configure base images for Linux builds</a>.
               </p>
             </li>
           </ul>
           <p>See the 
-            <a href="/SwiftPackageIndex/SPIManifest/documentation/spimanifest">SPIManifest package documentatation</a> for more details.
+            <a href="/SwiftPackageIndex/SPIManifest/documentation/spimanifest">SPIManifest package documentation</a> for more details.
           </p>
         </div>
       </div>
