--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView.1.html
@@ -278,7 +278,7 @@
             <section class="sidebar-links">
               <ul>
                 <li>
-                  <a href="https://github.com/Alamo/Alamofire">View on GitHub</a>
+                  <a class="github" href="https://github.com/Alamo/Alamofire">View on GitHub</a>
                 </li>
                 <li class="try-in-playground">
                   <a href="spi-playgrounds://open?dependencies=Alamo/Alamofire">Try in a Playground</a>
