--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_BuildIndex.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_BuildIndex.1.html
@@ -294,12 +294,15 @@
               <div class="results">
                 <div class="succeeded">
                   <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Succeeded</a>
+                  <span class="generated-docs" title="If successful, this build generated package documentation."></span>
                 </div>
                 <div class="succeeded">
                   <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Succeeded</a>
+                  <span class="generated-docs" title="If successful, this build generated package documentation."></span>
                 </div>
                 <div class="succeeded">
                   <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Succeeded</a>
+                  <span class="generated-docs" title="If successful, this build generated package documentation."></span>
                 </div>
               </div>
             </li>
