--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_BuildIndex.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_BuildIndex.1.html
@@ -127,13 +127,13 @@
               </div>
               <div class="results">
                 <div>
-                  <span>Build Pending</span>
+                  <span>Pending</span>
                 </div>
                 <div>
-                  <span>Build Pending</span>
+                  <span>Pending</span>
                 </div>
                 <div>
-                  <span>Build Pending</span>
+                  <span>Pending</span>
                 </div>
               </div>
             </li>
@@ -154,13 +154,13 @@
               </div>
               <div class="results">
                 <div>
-                  <span>Build Pending</span>
+                  <span>Pending</span>
                 </div>
                 <div>
-                  <span>Build Pending</span>
+                  <span>Pending</span>
                 </div>
                 <div>
-                  <span>Build Pending</span>
+                  <span>Pending</span>
                 </div>
               </div>
             </li>
@@ -181,13 +181,13 @@
               </div>
               <div class="results">
                 <div>
-                  <span>Build Pending</span>
+                  <span>Pending</span>
                 </div>
                 <div>
-                  <span>Build Pending</span>
+                  <span>Pending</span>
                 </div>
                 <div>
-                  <span>Build Pending</span>
+                  <span>Pending</span>
                 </div>
               </div>
             </li>
@@ -208,13 +208,13 @@
               </div>
               <div class="results">
                 <div>
-                  <span>Build Pending</span>
+                  <span>Pending</span>
                 </div>
                 <div>
-                  <span>Build Pending</span>
+                  <span>Pending</span>
                 </div>
                 <div>
-                  <span>Build Pending</span>
+                  <span>Pending</span>
                 </div>
               </div>
             </li>
@@ -235,13 +235,13 @@
               </div>
               <div class="results">
                 <div>
-                  <span>Build Pending</span>
+                  <span>Pending</span>
                 </div>
                 <div>
-                  <span>Build Pending</span>
+                  <span>Pending</span>
                 </div>
                 <div>
-                  <span>Build Pending</span>
+                  <span>Pending</span>
                 </div>
               </div>
             </li>
@@ -262,13 +262,13 @@
               </div>
               <div class="results">
                 <div>
-                  <span>Build Pending</span>
+                  <span>Pending</span>
                 </div>
                 <div>
-                  <span>Build Pending</span>
+                  <span>Pending</span>
                 </div>
                 <div>
-                  <span>Build Pending</span>
+                  <span>Pending</span>
                 </div>
               </div>
             </li>
@@ -293,15 +293,15 @@
               </div>
               <div class="results">
                 <div class="succeeded">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Succeeded</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Succeeded</a>
                   <span class="generated-docs" title="If successful, this build generated package documentation."></span>
                 </div>
                 <div class="succeeded">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Succeeded</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Succeeded</a>
                   <span class="generated-docs" title="If successful, this build generated package documentation."></span>
                 </div>
                 <div class="succeeded">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Succeeded</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Succeeded</a>
                   <span class="generated-docs" title="If successful, this build generated package documentation."></span>
                 </div>
               </div>
@@ -323,13 +323,13 @@
               </div>
               <div class="results">
                 <div class="failed">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Failed</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Failed</a>
                 </div>
                 <div class="failed">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Failed</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Failed</a>
                 </div>
                 <div class="failed">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Failed</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Failed</a>
                 </div>
               </div>
             </li>
@@ -350,13 +350,13 @@
               </div>
               <div class="results">
                 <div>
-                  <span>Build Queued</span>
+                  <span>Queued</span>
                 </div>
                 <div>
-                  <span>Build Queued</span>
+                  <span>Queued</span>
                 </div>
                 <div>
-                  <span>Build Queued</span>
+                  <span>Queued</span>
                 </div>
               </div>
             </li>
@@ -377,13 +377,13 @@
               </div>
               <div class="results">
                 <div>
-                  <span>Build Pending</span>
+                  <span>Pending</span>
                 </div>
                 <div class="succeeded">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Succeeded</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Succeeded</a>
                 </div>
                 <div class="succeeded">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Succeeded</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Succeeded</a>
                 </div>
               </div>
             </li>
@@ -404,13 +404,13 @@
               </div>
               <div class="results">
                 <div>
-                  <span>Build Timed Out</span>
+                  <span>Timed Out</span>
                 </div>
                 <div class="succeeded">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Succeeded</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Succeeded</a>
                 </div>
                 <div class="succeeded">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Succeeded</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Succeeded</a>
                 </div>
               </div>
             </li>
@@ -431,13 +431,13 @@
               </div>
               <div class="results">
                 <div>
-                  <span>Build Errored</span>
+                  <span>Errored</span>
                 </div>
                 <div class="succeeded">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Succeeded</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Succeeded</a>
                 </div>
                 <div class="succeeded">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Succeeded</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Succeeded</a>
                 </div>
               </div>
             </li>
@@ -462,13 +462,13 @@
               </div>
               <div class="results">
                 <div class="succeeded">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Succeeded</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Succeeded</a>
                 </div>
                 <div class="succeeded">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Succeeded</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Succeeded</a>
                 </div>
                 <div class="succeeded">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Succeeded</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Succeeded</a>
                 </div>
               </div>
             </li>
@@ -489,13 +489,13 @@
               </div>
               <div class="results">
                 <div class="failed">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Failed</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Failed</a>
                 </div>
                 <div class="failed">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Failed</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Failed</a>
                 </div>
                 <div class="failed">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Failed</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Failed</a>
                 </div>
               </div>
             </li>
@@ -516,13 +516,13 @@
               </div>
               <div class="results">
                 <div>
-                  <span>Build Queued</span>
+                  <span>Queued</span>
                 </div>
                 <div>
-                  <span>Build Queued</span>
+                  <span>Queued</span>
                 </div>
                 <div>
-                  <span>Build Queued</span>
+                  <span>Queued</span>
                 </div>
               </div>
             </li>
@@ -543,13 +543,13 @@
               </div>
               <div class="results">
                 <div class="succeeded">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Succeeded</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Succeeded</a>
                 </div>
                 <div class="succeeded">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Succeeded</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Succeeded</a>
                 </div>
                 <div class="succeeded">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Succeeded</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Succeeded</a>
                 </div>
               </div>
             </li>
@@ -570,13 +570,13 @@
               </div>
               <div class="results">
                 <div class="succeeded">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Succeeded</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Succeeded</a>
                 </div>
                 <div class="succeeded">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Succeeded</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Succeeded</a>
                 </div>
                 <div class="succeeded">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Succeeded</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Succeeded</a>
                 </div>
               </div>
             </li>
@@ -597,13 +597,13 @@
               </div>
               <div class="results">
                 <div class="succeeded">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Succeeded</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Succeeded</a>
                 </div>
                 <div class="succeeded">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Succeeded</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Succeeded</a>
                 </div>
                 <div class="succeeded">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Succeeded</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Succeeded</a>
                 </div>
               </div>
             </li>
@@ -628,13 +628,13 @@
               </div>
               <div class="results">
                 <div class="succeeded">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Succeeded</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Succeeded</a>
                 </div>
                 <div class="succeeded">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Succeeded</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Succeeded</a>
                 </div>
                 <div class="succeeded">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Succeeded</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Succeeded</a>
                 </div>
               </div>
             </li>
@@ -655,13 +655,13 @@
               </div>
               <div class="results">
                 <div class="failed">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Failed</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Failed</a>
                 </div>
                 <div class="failed">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Failed</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Failed</a>
                 </div>
                 <div class="failed">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Failed</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Failed</a>
                 </div>
               </div>
             </li>
@@ -682,13 +682,13 @@
               </div>
               <div class="results">
                 <div>
-                  <span>Build Queued</span>
+                  <span>Queued</span>
                 </div>
                 <div>
-                  <span>Build Queued</span>
+                  <span>Queued</span>
                 </div>
                 <div>
-                  <span>Build Queued</span>
+                  <span>Queued</span>
                 </div>
               </div>
             </li>
@@ -709,13 +709,13 @@
               </div>
               <div class="results">
                 <div class="succeeded">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Succeeded</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Succeeded</a>
                 </div>
                 <div class="succeeded">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Succeeded</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Succeeded</a>
                 </div>
                 <div class="succeeded">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Succeeded</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Succeeded</a>
                 </div>
               </div>
             </li>
@@ -736,13 +736,13 @@
               </div>
               <div class="results">
                 <div class="succeeded">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Succeeded</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Succeeded</a>
                 </div>
                 <div class="succeeded">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Succeeded</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Succeeded</a>
                 </div>
                 <div class="succeeded">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Succeeded</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Succeeded</a>
                 </div>
               </div>
             </li>
@@ -763,13 +763,13 @@
               </div>
               <div class="results">
                 <div class="succeeded">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Succeeded</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Succeeded</a>
                 </div>
                 <div class="succeeded">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Succeeded</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Succeeded</a>
                 </div>
                 <div class="succeeded">
-                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Build Succeeded</a>
+                  <a href="/builds/2F16F873-1EBF-4987-B4CE-A9F22269D13A">Succeeded</a>
                 </div>
               </div>
             </li>
