--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_BuildShow.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_BuildShow.1.html
@@ -251,6 +251,8 @@ CompileSwift normal x86_64 /Users/spi/builds/zsxYGgdt/0/finestructure/swiftpacka
           <small>The Swift Package Index is entirely funded by community sponsorship. Thank you to 
             <a href="https://github.com/SwiftPackageIndex/SwiftPackageIndex-Server#funding-and-sponsorship">all our sponsors for their generosity</a>.
           </small>
+          <a rel="me" href="https://mas.to/@SwiftPackageIndex"></a>
+          <a rel="me" href="https://mas.to/@SwiftPackageUpdates"></a>
         </nav>
       </div>
     </footer>
