--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_binary_targets.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_binary_targets.1.html
@@ -138,6 +138,7 @@
           <section>
             <section>
               <ul class="main-metadata">
+                <li class="authors">Written by Author One, Author Two, Author Three, and 5 other contributors.</li>
                 <li class="has-binary-targets">
                   <strong>This package includes binary-only targets </strong>where source code may not be available. There may be more info available in the 
                   <a href="#readme" title="README">README</a>.
