--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_HomeIndexView.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_HomeIndexView.1.html
@@ -69,15 +69,9 @@
       <div class="inner">
         <section class="two-column">
           <section>
-            <section class="twitter-spaces">
-              <p>Join us for our 
-                <a href="https://example.com/next/twitter/space/">next Twitter Space</a> discussing new and updated packages. Or catch up with 
-                <a href="https://example.com/previous/twitter/space/">our most recent episode</a>.
-              </p>
-              <p class="twitter-profile">
-                <small>Follow along at 
-                  <a href="https://twitter.com/SwiftPackages">@SwiftPackages</a>
-                </small>
+            <section class="podcast">
+              <p>Join Dave and Sven biweekly for a chat about ongoing Swift Package Index development and a selection of package recommendations on our 
+                <a href="https://swiftpackageindexing.transistor.fm">Swift Package Indexing podcast</a>.
               </p>
             </section>
             <section class="recent">
