--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_BuildMonitorIndex.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_BuildMonitorIndex.1.html
@@ -177,6 +177,7 @@
           <small>The Swift Package Index is entirely funded by community sponsorship. Thank you to 
             <a href="https://github.com/SwiftPackageIndex/SwiftPackageIndex-Server#funding-and-sponsorship">all our sponsors for their generosity</a>.
           </small>
+          <small>The Swift Package Index is operated by SPI Operations Limited, a company registered in the UK with company number 13466692.</small>
           <a rel="me" href="https://mas.to/@SwiftPackageIndex"></a>
           <a rel="me" href="https://mas.to/@SwiftPackageUpdates"></a>
         </nav>
