--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_SupportersShow.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_SupportersShow.1.html
@@ -77,7 +77,24 @@
       <div class="inner">
         <div class="supporters">
           <h2>Supporters</h2>
-          <p>This project is entirely funded by ...</p>
+          <section class="preamble">
+            <div>
+              <p>This project is funded entirely by the generous financial support of the Swift community. Thank you to 
+                <strong>everyone</strong> who supports this project. We couldn’t keep it running without you!
+              </p>
+              <p>You can add your support through 
+                <a href="https://github.com/sponsors/SwiftPackageIndex">our GitHub Sponsors page</a>. Or, if you are interested in corporate sponsorship, please 
+                <a href="mailto:contact@swiftpackageindex.com">get in touch</a>.
+              </p>
+            </div>
+            <div class="ghcta">
+              <a href="https://github.com/sponsors/SwiftPackageIndex">
+                <p>Please consider supporting this project through GitHub Sponsors.</p>
+                <div class="panel-button">Visit GitHub Sponsors</div>
+              </a>
+            </div>
+          </section>
+          <hr/>
           <section class="corporate">
             <h3>Corporate Supporters</h3>
             <ul>
@@ -86,6 +103,27 @@
                   <picture>
                     <source srcset="/images/logo.svg" media="(prefers-color-scheme: dark)"/>
                     <img alt="Sample Sponsor logo" src="/images/logo.svg" width="300" height="75"/>
+                  </picture>
+                </a>
+              </li>
+            </ul>
+          </section>
+          <section class="infrastructure">
+            <h3>Infrastructure Supporters</h3>
+            <ul>
+              <li>
+                <a href="https://azure.microsoft.com">
+                  <picture>
+                    <source srcset="/images/sponsors/microsoft~dark.png" media="(prefers-color-scheme: dark)"/>
+                    <img alt="Microsoft Azure logo" src="/images/sponsors/microsoft.png" width="300" height="75"/>
+                  </picture>
+                </a>
+              </li>
+              <li>
+                <a href="https://macstadium.com">
+                  <picture>
+                    <source srcset="/images/sponsors/macstadium~dark.png" media="(prefers-color-scheme: dark)"/>
+                    <img alt="MacStadium logo" src="/images/sponsors/macstadium.png" width="300" height="75"/>
                   </picture>
                 </a>
               </li>
@@ -222,6 +260,7 @@
               </li>
             </ul>
           </section>
+          <div class="thank-you">Thank you!</div>
         </div>
       </div>
     </main>
