Mock out the infrastructure sponsors, too.

--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_SupportersShow.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_SupportersShow.1.html
@@ -106,24 +106,32 @@
                   </picture>
                 </a>
               </li>
+              <li>
+                <a href="https://example.com/sponsored/link">
+                  <picture>
+                    <source srcset="/images/logo.svg" media="(prefers-color-scheme: dark)"/>
+                    <img alt="Sample Sponsor logo" src="/images/logo.svg" width="300" height="75"/>
+                  </picture>
+                </a>
+              </li>
             </ul>
           </section>
           <section class="infrastructure">
             <h3>Infrastructure Supporters</h3>
             <ul>
               <li>
-                <a href="https://azure.microsoft.com">
+                <a href="https://example.com/sponsored/link">
                   <picture>
-                    <source srcset="/images/sponsors/microsoft~dark.png" media="(prefers-color-scheme: dark)"/>
-                    <img alt="Microsoft Azure logo" src="/images/sponsors/microsoft.png" width="300" height="75"/>
+                    <source srcset="/images/logo.svg" media="(prefers-color-scheme: dark)"/>
+                    <img alt="Sample Sponsor logo" src="/images/logo.svg" width="300" height="75"/>
                   </picture>
                 </a>
               </li>
               <li>
-                <a href="https://macstadium.com">
+                <a href="https://example.com/sponsored/link">
                   <picture>
-                    <source srcset="/images/sponsors/macstadium~dark.png" media="(prefers-color-scheme: dark)"/>
-                    <img alt="MacStadium logo" src="/images/sponsors/macstadium.png" width="300" height="75"/>
+                    <source srcset="/images/logo.svg" media="(prefers-color-scheme: dark)"/>
+                    <img alt="Sample Sponsor logo" src="/images/logo.svg" width="300" height="75"/>
                   </picture>
                 </a>
               </li>
