New mock also added a sponsor to the homepage.

--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_HomeIndexView.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_HomeIndexView.1.html
@@ -209,6 +209,15 @@
                 <p>Sponsored links tell everyone about a thing that you can use to do another thing to do!</p>
               </div>
             </a>
+            <a href="https://example.com/sponsored/link">
+              <div class="ccta">
+                <picture>
+                  <source srcset="/images/logo.svg" media="(prefers-color-scheme: dark)"/>
+                  <img alt="Sample Sponsor logo" src="/images/logo.svg"/>
+                </picture>
+                <p>Sponsored links tell everyone about a thing that you can use to do another thing to do!</p>
+              </div>
+            </a>
             <small>Thanks so much to all of our generous sponsors for 
               <a href="https://github.com/SwiftPackageIndex/SwiftPackageIndex-Server/blob/main/README.md#funding-and-sponsorship">supporting this project</a>.
             </small>
