--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_HomeIndexView.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_HomeIndexView.1.html
@@ -38,6 +38,9 @@
         <nav>
           <ul>
             <li>
+              <a class="supporters" href="/supporters">Supporters</a>
+            </li>
+            <li>
               <a href="/add-a-package">Add a Package</a>
             </li>
             <li>
