--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_SearchShow_withXSSAttempt.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_SearchShow_withXSSAttempt.1.html
@@ -37,14 +37,8 @@
         </a>
         <nav>
           <ul>
-            <li class="menu-scta">
-              <a id="menu-scta" href="https://github.com/sponsors/SwiftPackageIndex"></a>
-              <div id="menu-scta-help">
-                <p>The Swift Package Index is an open-source project entirely funded by community donations.</p>
-                <p>Please consider sponsoring this project. 
-                  <strong>Thank you!</strong>
-                </p>
-              </div>
+            <li>
+              <a class="supporters" href="/supporters">Supporters</a>
             </li>
             <li>
               <a href="/add-a-package">Add a Package</a>
