--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_SupportersShow.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_SupportersShow.1.html
@@ -89,10 +89,10 @@
                 <a href="mailto:contact@swiftpackageindex.com">get in touch</a>.
               </p>
             </div>
-            <div class="ghcta">
+            <div class="panel-button ghcta">
               <a href="https://github.com/sponsors/SwiftPackageIndex">
                 <p>Please consider supporting this project through GitHub Sponsors.</p>
-                <div class="panel-button">Visit GitHub Sponsors</div>
+                <div class="cta">Visit GitHub Sponsors</div>
               </a>
             </div>
           </section>
