--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_HomeIndexView.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_HomeIndexView.1.html
@@ -69,11 +69,12 @@
       <div class="inner">
         <section class="two-column">
           <section>
-            <section class="podcast">
-              <p>Join Dave and Sven biweekly for a chat about ongoing Swift Package Index development and a selection of package recommendations on our 
-                <a href="https://swiftpackageindexing.transistor.fm">Swift Package Indexing podcast</a>.
-              </p>
-            </section>
+            <div class="panel-button podcast">
+              <a href="https://swiftpackageindexing.transistor.fm">
+                <div class="body">Join Dave and Sven every two weeks for a chat about ongoing Swift Package Index development and a selection of package recommendations on the Swift Package Indexing podcast.</div>
+                <div class="cta">Listen Now &rarr;</div>
+              </a>
+            </div>
             <section class="recent">
               <div class="recent_packages">
                 <h3>Recently Added</h3>
@@ -147,83 +148,51 @@
               </div>
             </section>
           </section>
-          <section>
-            <div class="scta">
-              <p>This project wouldn't be possible without 
-                <a href="https://github.com/sponsors/SwiftPackageIndex">community support</a>. Please consider 
-                <a href="https://github.com/sponsors/SwiftPackageIndex">joining 14 other sponsors</a>.
-              </p>
-              <p>
-                <div class="avatars">
-                  <a href="https://github.com/sponsors/SwiftPackageIndex">
-                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="30" height="30"/>
-                  </a>
-                  <a href="https://github.com/sponsors/SwiftPackageIndex">
-                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="30" height="30"/>
-                  </a>
-                  <a href="https://github.com/sponsors/SwiftPackageIndex">
-                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="30" height="30"/>
-                  </a>
-                  <a href="https://github.com/sponsors/SwiftPackageIndex">
-                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="30" height="30"/>
-                  </a>
-                  <a href="https://github.com/sponsors/SwiftPackageIndex">
-                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="30" height="30"/>
-                  </a>
-                  <a href="https://github.com/sponsors/SwiftPackageIndex">
-                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="30" height="30"/>
-                  </a>
-                  <a href="https://github.com/sponsors/SwiftPackageIndex">
-                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="30" height="30"/>
-                  </a>
-                  <a href="https://github.com/sponsors/SwiftPackageIndex">
-                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="30" height="30"/>
-                  </a>
-                  <a href="https://github.com/sponsors/SwiftPackageIndex">
-                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="30" height="30"/>
-                  </a>
-                  <a href="https://github.com/sponsors/SwiftPackageIndex">
-                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="30" height="30"/>
-                  </a>
-                  <a href="https://github.com/sponsors/SwiftPackageIndex">
-                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="30" height="30"/>
-                  </a>
-                  <a href="https://github.com/sponsors/SwiftPackageIndex">
-                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="30" height="30"/>
-                  </a>
-                  <a href="https://github.com/sponsors/SwiftPackageIndex">
-                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="30" height="30"/>
-                  </a>
-                  <a href="https://github.com/sponsors/SwiftPackageIndex">
-                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="30" height="30"/>
-                  </a>
+          <section class="supporter-ctas">
+            <div class="panel-button scta">
+              <a href="/supporters">
+                <div class="body">Join the companies and individuals that make running this site possible.
+                  <div class="avatars">
+                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="20" height="20"/>
+                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="20" height="20"/>
+                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="20" height="20"/>
+                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="20" height="20"/>
+                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="20" height="20"/>
+                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="20" height="20"/>
+                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="20" height="20"/>
+                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="20" height="20"/>
+                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="20" height="20"/>
+                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="20" height="20"/>
+                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="20" height="20"/>
+                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="20" height="20"/>
+                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="20" height="20"/>
+                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="20" height="20"/>
+                  </div>
                 </div>
-                <small>
-                  <a href="https://github.com/sponsors/SwiftPackageIndex">&hellip; and 0 more.</a>
-                </small>
-              </p>
+              </a>
             </div>
-            <a href="https://example.com/sponsored/link">
-              <div class="ccta">
-                <picture>
-                  <source srcset="/images/logo.svg" media="(prefers-color-scheme: dark)"/>
-                  <img alt="Sample Sponsor logo" src="/images/logo.svg"/>
-                </picture>
-                <p>Sponsored links tell everyone about a thing that you can use to do another thing to do!</p>
-              </div>
-            </a>
-            <a href="https://example.com/sponsored/link">
-              <div class="ccta">
-                <picture>
-                  <source srcset="/images/logo.svg" media="(prefers-color-scheme: dark)"/>
-                  <img alt="Sample Sponsor logo" src="/images/logo.svg"/>
-                </picture>
-                <p>Sponsored links tell everyone about a thing that you can use to do another thing to do!</p>
-              </div>
-            </a>
-            <small>Thanks so much to all of our generous sponsors for 
-              <a href="https://github.com/SwiftPackageIndex/SwiftPackageIndex-Server/blob/main/README.md#funding-and-sponsorship">supporting this project</a>.
-            </small>
+            <div class="panel-button ccta">
+              <a href="https://example.com/sponsored/link">
+                <div class="body">
+                  <picture>
+                    <source srcset="/images/logo.svg" media="(prefers-color-scheme: dark)"/>
+                    <img alt="Sample Sponsor logo" src="/images/logo.svg"/>
+                  </picture>Sponsored links tell everyone about a thing that you can use to do another thing to do!
+                </div>
+                <div class="cta">Visit Sample Sponsor &rarr;</div>
+              </a>
+            </div>
+            <div class="panel-button ccta">
+              <a href="https://example.com/sponsored/link">
+                <div class="body">
+                  <picture>
+                    <source srcset="/images/logo.svg" media="(prefers-color-scheme: dark)"/>
+                    <img alt="Sample Sponsor logo" src="/images/logo.svg"/>
+                  </picture>Sponsored links tell everyone about a thing that you can use to do another thing to do!
+                </div>
+                <div class="cta">Visit Sample Sponsor &rarr;</div>
+              </a>
+            </div>
           </section>
         </section>
       </div>
