--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_SupportersShow.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_SupportersShow.1.html
@@ -92,8 +92,8 @@
             <div>
               <div class="panel-button ghcta">
                 <a href="https://github.com/sponsors/SwiftPackageIndex">
-                  <p>Please consider supporting this project through GitHub Sponsors.</p>
-                  <div class="cta">Visit GitHub Sponsors</div>
+                  <div class="body">Please consider supporting this project through GitHub Sponsors.</div>
+                  <div class="cta">Visit GitHub Sponsors &rarr;</div>
                 </a>
               </div>
             </div>
