--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_HomeIndexView.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_HomeIndexView.1.html
@@ -179,7 +179,7 @@
                     <img alt="Sample Sponsor logo" src="/images/logo.svg"/>
                   </picture>Sponsored links tell everyone about a thing that you can use to do another thing to do!
                 </div>
-                <div class="cta">Visit Sample Sponsor, &rarr;</div>
+                <div class="cta">Visit Sample Sponsor &rarr;</div>
               </a>
             </div>
             <div data-controller="panel-button" data-panel-button-analytics-event-value="Home - Sponsor CTA (Sample Sponsor)" class="panel-button ccta">
@@ -190,7 +190,7 @@
                     <img alt="Sample Sponsor logo" src="/images/logo.svg"/>
                   </picture>Sponsored links tell everyone about a thing that you can use to do another thing to do!
                 </div>
-                <div class="cta">Visit Sample Sponsor, &rarr;</div>
+                <div class="cta">Visit Sample Sponsor &rarr;</div>
               </a>
             </div>
           </section>
