Update snapshot tests

--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_BuildMonitorIndex.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_BuildMonitorIndex.1.html
@@ -4,19 +4,19 @@
     <meta name="robots" content="noindex"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta charset="UTF-8"/>
-    <meta name="og:site_name" content="The Swift Package Index"/>
+    <meta property="og:site_name" content="The Swift Package Index"/>
     <link rel="canonical" href="http://localhost:8080/"/>
     <meta name="twitter:url" content="http://localhost:8080/"/>
-    <meta name="og:url" content="http://localhost:8080/"/>
+    <meta property="og:url" content="http://localhost:8080/"/>
     <title>Build System Monitor &ndash; Swift Package Index</title>
     <meta name="twitter:title" content="Build System Monitor &ndash; Swift Package Index"/>
-    <meta name="og:title" content="Build System Monitor &ndash; Swift Package Index"/>
+    <meta property="og:title" content="Build System Monitor &ndash; Swift Package Index"/>
     <meta name="description" content="See what the platform and Swift version compatibility build system for the Swift Package Index is processing. The package index constantly looks for changes in packages and, when found, builds every …"/>
     <meta name="twitter:description" content="See what the platform and Swift version compatibility build system for the Swift Package Index is processing. The package index constantly looks for changes in packages and, when found, builds every …"/>
-    <meta name="og:description" content="See what the platform and Swift version compatibility build system for the Swift Package Index is processing. The package index constantly looks for changes in packages and, when found, builds every …"/>
+    <meta property="og:description" content="See what the platform and Swift version compatibility build system for the Swift Package Index is processing. The package index constantly looks for changes in packages and, when found, builds every …"/>
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:image" content="http://localhost:8080/images/logo.png"/>
-    <meta name="og:image" content="http://localhost:8080/images/logo.png"/>
+    <meta property="og:image" content="http://localhost:8080/images/logo.png"/>
     <link rel="shortcut icon" href="/images/logo-small.png" type="image/png"/>
     <link rel="stylesheet" href="/main.css?test" data-turbolinks-track="reload"/>
     <link rel="alternate" type="application/rss+xml" title="Swift Package Index – Recently Added" href="http://localhost:8080/packages.rss"/>
