--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_BuildIndex.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_BuildIndex.1.html
@@ -4,19 +4,19 @@
     <meta name="robots" content="noindex"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta charset="UTF-8"/>
-    <meta name="og:site_name" content="The Swift Package Index"/>
+    <meta property="og:site_name" content="The Swift Package Index"/>
     <link rel="canonical" href="http://localhost:8080/"/>
     <meta name="twitter:url" content="http://localhost:8080/"/>
-    <meta name="og:url" content="http://localhost:8080/"/>
+    <meta property="og:url" content="http://localhost:8080/"/>
     <title>foobar &ndash; Build Results &ndash; Swift Package Index</title>
     <meta name="twitter:title" content="foobar &ndash; Build Results &ndash; Swift Package Index"/>
-    <meta name="og:title" content="foobar &ndash; Build Results &ndash; Swift Package Index"/>
+    <meta property="og:title" content="foobar &ndash; Build Results &ndash; Swift Package Index"/>
     <meta name="description" content="The latest compatibility build results for foobar, showing compatibility across 6 platforms with 4 versions of Swift."/>
     <meta name="twitter:description" content="The latest compatibility build results for foobar, showing compatibility across 6 platforms with 4 versions of Swift."/>
-    <meta name="og:description" content="The latest compatibility build results for foobar, showing compatibility across 6 platforms with 4 versions of Swift."/>
+    <meta property="og:description" content="The latest compatibility build results for foobar, showing compatibility across 6 platforms with 4 versions of Swift."/>
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:image" content="http://localhost:8080/images/logo.png"/>
-    <meta name="og:image" content="http://localhost:8080/images/logo.png"/>
+    <meta property="og:image" content="http://localhost:8080/images/logo.png"/>
     <link rel="shortcut icon" href="/images/logo-small.png" type="image/png"/>
     <link rel="stylesheet" href="/main.css?test" data-turbolinks-track="reload"/>
     <link rel="alternate" type="application/rss+xml" title="Swift Package Index – Recently Added" href="http://localhost:8080/packages.rss"/>
