--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_MarkdownPageStyling.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_MarkdownPageStyling.1.html
@@ -4,19 +4,19 @@
     <meta name="robots" content="noindex"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta charset="UTF-8"/>
-    <meta name="og:site_name" content="The Swift Package Index"/>
+    <meta property="og:site_name" content="The Swift Package Index"/>
     <link rel="canonical" href="http://localhost:8080/"/>
     <meta name="twitter:url" content="http://localhost:8080/"/>
-    <meta name="og:url" content="http://localhost:8080/"/>
+    <meta property="og:url" content="http://localhost:8080/"/>
     <title>Swift Package Index</title>
     <meta name="twitter:title" content="Swift Package Index"/>
-    <meta name="og:title" content="Swift Package Index"/>
+    <meta property="og:title" content="Swift Package Index"/>
     <meta name="description" content="The Swift Package Index is the place to find the best Swift packages."/>
     <meta name="twitter:description" content="The Swift Package Index is the place to find the best Swift packages."/>
-    <meta name="og:description" content="The Swift Package Index is the place to find the best Swift packages."/>
+    <meta property="og:description" content="The Swift Package Index is the place to find the best Swift packages."/>
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:image" content="http://localhost:8080/images/logo.png"/>
-    <meta name="og:image" content="http://localhost:8080/images/logo.png"/>
+    <meta property="og:image" content="http://localhost:8080/images/logo.png"/>
     <link rel="shortcut icon" href="/images/logo-small.png" type="image/png"/>
     <link rel="stylesheet" href="/main.css?test" data-turbolinks-track="reload"/>
     <link rel="alternate" type="application/rss+xml" title="Swift Package Index – Recently Added" href="http://localhost:8080/packages.rss"/>
@@ -68,7 +68,7 @@
         return false
     }
 }
-</code></pre><h2>Blockquotes</h2><blockquote><p>Blockquotes can also be nested...&gt; ...by using additional greater-than signs right next to each other... &gt; &gt; ...or with spaces between arrows.</p></blockquote><h2>Links</h2><p><a href="http://dev.nodeca.com">link text</a></p><p><a href="http://nodeca.github.io/pica/demo/ "title text!"">link with title</a></p><p>Autoconverted link https://github.com/nodeca/pica</p><h2>Emoji</h2><p>😂 :+1: :octocat:</p><h2>Task List</h2><ul><li>[ ] One</li><li>[x] Two</li></ul><h2>Tables</h2><p>First Header | Second Header ------------ | ------------- Content cell 1 | Content cell 2 Content column 1 | Content column 2</p></div>
+</code></pre><h2>Blockquotes</h2><blockquote><p>Blockquotes can also be nested...&gt; ...by using additional greater-than signs right next to each other... &gt; &gt; ...or with spaces between arrows.</p></blockquote><h2>Links</h2><p><a href="http://dev.nodeca.com">link text</a></p><p><a href="http://nodeca.github.io/pica/demo/ "title text!"">link with title</a></p><p>Autoconverted link https://github.com/nodeca/pica</p><h2>Emoji</h2><p>😂 :+1: :octocat:</p><h2>Task List</h2><ul><li>[ ] One</li><li>[x] Two</li></ul><h2>Tables</h2><p>First Header | Second Header</p><p>------------ | ------------- Content cell 1 | Content cell 2 Content column 1 | Content column 2</p></div>
     </main>
     <footer>
       <div class="inner">
