--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_MarkdownPageStyling.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_MarkdownPageStyling.1.html
@@ -68,7 +68,7 @@
         return false
     }
 }
-</code></pre><h2>Blockquotes</h2><blockquote><p>Blockquotes can also be nested...&gt; ...by using additional greater-than signs right next to each other... &gt; &gt; ...or with spaces between arrows.</p></blockquote><h2>Links</h2><p><a href="http://dev.nodeca.com">link text</a></p><p><a href="http://nodeca.github.io/pica/demo/ "title text!"">link with title</a></p><p>Autoconverted link https://github.com/nodeca/pica</p><h2>Emoji</h2><p>😂 :+1: :octocat:</p><h2>Task List</h2><ul><li>[ ] One</li><li>[x] Two</li></ul><h2>Tables</h2><p>First Header | Second Header</p><p>------------ | ------------- Content cell 1 | Content cell 2 Content column 1 | Content column 2</p></div>
+</code></pre><h2>Blockquotes</h2><blockquote><p>Blockquotes can also be nested...&gt; ...by using additional greater-than signs right next to each other... &gt; &gt; ...or with spaces between arrows.</p></blockquote><h2>Links</h2><p><a href="http://dev.nodeca.com">link text</a></p><p><a href="http://nodeca.github.io/pica/demo/ "title text!"">link with title</a></p><p>Autoconverted link https://github.com/nodeca/pica</p></div>
     </main>
     <footer>
       <div class="inner">
