--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_ValidateSPIManifest_show.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_ValidateSPIManifest_show.1.html
@@ -84,7 +84,7 @@ builder:
             </label>
             <button type="submit">Validate</button>
           </form>
-          <div class="result valid">Manifest is valid!
+          <div class="result valid">Manifest is valid! This is how we parsed it:
             <pre>Manifest(
   version: 1,
   metadata: nil,
