--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_MaintainerInfoIndex.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_MaintainerInfoIndex.1.html
@@ -141,9 +141,7 @@
             </li>
           </ul>
           <p>See the 
-            <a href="/SwiftPackageIndex/SPIManifest/documentation/spimanifest">SPIManifest package documentation</a> for more details.
-          </p>
-          <p>You can use our 
+            <a href="/SwiftPackageIndex/SPIManifest/documentation/spimanifest">SPIManifest package documentation</a> for more details, or use our 
             <a href="/validate-spi-manifest">online manifest validation helper</a> to validate your 
             <code>.spi.yml</code>file.
           </p>
